css/style.css
/* Variabili CSS per colori personalizzati */
:root {
    --primary-color: #ef705d;
    --secondary-color: #c4c4c4;
    --secondary-active-color: #dcdcdc;
    --background-color: 248, 249 ,250; /* rgb(97, 98, 98) #f8f9fa */
    --text-color: #212529;
    --text-selected: #f8f9fa;
    --border-radius: 5px;
}

body {
    background-color: var(--background-color);
    color: var(--text-color);
    display: flex;
    justify-content: center;
    height: 100vh;
    padding: 2vh 0 0;
}

nav {
    background-color: var(--primary-color);
    border-top-left-radius: var(--border-radius);
    border-top-right-radius: var(--border-radius);
    line-height: 1.5em;
    color: var(--text-selected);
    font-size: x-large;
    padding: 5px;
    display: flex;
    align-items: center;
    max-height: 50px;
}

nav img {
    width: 30px;
    height: 30px;
    --bs-btn-padding-y: 0;
}

nav .btn-primary {
    background-color: var(--primary-color);
    border-color: var(--primary-color);
}

nav .btn-secondary {
    background-color: var(--secondary-color);
    border-color: var(--secondary-color);
    color: var(--text-color);
}

nav .btn-primary:hover {
    background-color: color-mix(in srgb, var(--primary-color) 100%, black 10%);
}

nav h1 {
    display: inline-block;
    line-height: 42px;
    min-height: 48px;
    max-height: 48px;
    left: 0;
    margin: auto;
    font-size: 20px;
    text-align: center;
    font-weight: bold;
}

nav .btn:disabled {
    border-color: transparent
}

.form-control {
    border-color: var(--secondary-color);
}

.text-primary {
    color: rgba(var(--primary-color),var(--bs-text-opacity)) 
}

.main-container {
    background: #fff;
    border-radius: var(--border-radius);
    border: solid 1px var(--primary-color);
    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
    display: flex;
    flex-direction: column;
    position: relative;
    min-height: 550px;
}

.btn-primary {
    --bs-btn-bg: var(--secondary-color);
    --bs-btn-border-color: var(--secondary-color);
    --bs-btn-hover-bg: var(--secondary-active-color); 
    --bs-btn-active-bg: var(--secondary-active-color);
    --bs-btn-hover-border-color: var(--secondary-active-color);
    --bs-btn-active-border-color: var(--secondary-color);
    --bs-btn-disabled-bg: var(--secondary-active-color); 
    --bs-btn-disabled-border-color: var(--secondary-active-color);
}

.btn-full-width {
    width: 100%;
}

.btn-primary:active,
.btn-primary:hover {
    border-color: var(--secondary-active-color);
}

.form-floating input:focus,
.form-floating textarea:focus,
.form-control:focus
{
    border-color: var(--primary-color);
    box-shadow: 0 0 0 1px var(--primary-color);
}

.form-check-input:checked {
    background-color: var(--primary-color);
    border-color: var(--primary-color);
}

.form-check-input:focus {
    box-shadow: 0 0 0 0.2rem rgba(var(--primary-color), 0.5);
}

.form-section {
    margin-top: 1em;
}

.form-control-error {
    color: red;
}

.form-label {
    margin-bottom: 0;
}

.btn-outline-secondary {
    --bs-btn-color: var(--primary-color);
    --bs-btn-border-color: var(--primary-color);
    --bs-btn-hover-color: var(--primary-color);
}

.btn:hover {
    background-color: var(--primary-color);
    border-color: var(--primary-color);
    color: white;
}

#alert {
    justify-content: center;
}

img.ico {
    width: 24px;
    max-width: 24px;
    max-height: none;
    filter: invert(72%) sepia(31%) saturate(7309%) hue-rotate(323deg) brightness(98%) contrast(91%);
}

img.ico-input {
    width: 24px;
    max-width: 24px;
    filter: invert(72%) sepia(31%) saturate(7309%) hue-rotate(323deg) brightness(98%) contrast(91%);
}

.input-group-text {
    color: var(--primary-color);
}

#spinner {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    z-index: 100;
    background: rgba(0, 0, 0, 0.2);
    backdrop-filter: blur(10px) opacity(0.5) !important;
    visibility: hidden;
}

#spinner .spinner-border  {
    margin-top: calc( (40% / 2) - 20rem);
    --bs-spinner-width: 20rem;
    --bs-spinner-height: 20rem;
    --bs-spinner-border-width: 0.75em;
    opacity: 1 !important;
    border: var(--bs-spinner-border-width) solid var(--primary-color);
    border-right-color: transparent;
}

#content {
    min-height: 200px; /* fallback, will be overridden by JS */
    box-sizing: border-box;
    flex-grow: 1; /* Allow content to grow */
}

 .main-container {
     display: flex;
     flex-direction: column;
     position: relative;
 }

